# OSKY-Interview-Qs

./: .gitignore  README.md
backend/: _.php  data.json  index.html  index.php
backend/json-test/: Cargo.toml
backend/json-test/src/types/: mod.rs
frontend/: index.html
