[package]
name = "json-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.1", features = ["full"] }
hyper-native-tls = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[[bin]]
name = "test"
path = "./bin/test.rs"